Added Welcome and Footer

--- a/index.html
+++ b/index.html
@@ -23,5 +23,12 @@
                 </ul>
             </nav>
         </header>
+        <section>
+            <h2>Welcome to my page!!</h2>
+        </section>
+        <footer>
+            <p><small>Created with passion by Hypekingfish</small></p>
+            <p><small>All content &copy; of Hypekingfish</small></p>
+        </footer>
     </body>
 </html>
