--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
         <footer>
             <p><small>Created with passion by Hypekingfish</small></p>
-            <p><small>All content &copy; of Hypekingfish</small></p>
+            <p><small>All content &copy; of Hypekingfish unless previous copyright exists.</small></p>
         </footer>
     </body>
 </html>
