--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
         </header>
-        <section>
+        <section class="WHeader">
             <h2>Welcome to my page!!</h2>
         </section>
         <footer>
