Added Images and coloring

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>Welcome to my page!!</h2>
         </section>
         <footer>
-            <p><small>Created with passion by Hypekingfish</small></p>
+            <p><small><img src="img/Progress_Pride_Flag.png"><img src="/img/360 Controller.png"> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"><img src="/img/360 Controller.png"></small></p>
             <p><small>All content &copy; of Hypekingfish unless previous copyright exists.</small></p>
         </footer>
     </body>
