--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </section>
         <footer>
             <p><small><img src="/img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="/img/Progress_Pride_Flag.png"/></small></p>
-            <p><small>All content &copy; of Hypekingfish & Rainer Guard, unless previous copyright exists.</small></p>
+            <p><small>All content &copy; of Hypekingfish unless previous copyright exists.</small></p>
         </footer>
     </body>
 </html>
