removed pride flags for now

--- a/about.html
+++ b/about.html
@@ -26,15 +26,15 @@
             </nav>
         </header>
         <section class="AHeader">
-            <h2>Placeholder</h2>
+            <h2>About Me</h2>
         </section>
         <section class="about">
             <img src="" alt="">
             <p></p>
         </section>
         <footer>
-            <p><small><img src="/img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="/img/Progress_Pride_Flag.png"/></small></p>
-            <p><small>All content &copy; of Hypekingfish unless previous copyright exists.</small></p>
+            <p><small> Created with passion by Hypekingfish </small></p>
+            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
         </footer>
     </body>
 </html>
