--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <h2>Welcome to my page!!</h2>
         </section>
         <footer>
-            <p><small><img src="img/Progress_Pride_Flag.png"> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"></small></p>
-            <p><small>All content &copy; of Hypekingfish unless previous copyright exists.</small></p>
+            <p><small> Created with passion by Hypekingfish </small></p>
+            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
         </footer>
     </body>
 </html>
