Added Background image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 </ul>
             </nav>
         </header>
+        <section class="Background">
+        </section>
         <section class="WHeader">
             <h2>Welcome to my page!!</h2>
         </section>
