--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <section class="WHeader">
             <h2>Welcome to my page!!</h2>
         </section>
+        <div class="background-image" aria-label="Boeing 737 Freedom One"></div>
         <footer>
             <p><small> Created with passion by Hypekingfish </small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
