--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
                 </ul>
             </nav>
         </header>
-        <section class="Background">
-        </section>
         <section class="WHeader">
-            <h2>Welcome to my page!!</h2>
+            <article>
+                <h2>Welcome to my Page</h2>
+            </article>
+            <article>
+                <h3>Me at a glance</h3>
+                <p></p>
+            </article>
         </section>
-        <div class="background-image" aria-label="Boeing 737 Freedom One"></div>
+        <article>
+            <h3>
+                
+            </h3>
+        </article>
         <footer>
             <p><small> Created with passion by Hypekingfish </small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
