--- a/flying.html
+++ b/flying.html
@@ -22,12 +22,9 @@
                 </ul>
             </nav>
         </header>
-        <section class="Vatsim">
-            <div id="vatsim-hours">Loading hours</div>
-            <script src="vatsimHours.js"></script>
+        <section class="">
         </section>
         <article>
-            
         </article>
         <footer>
             <p><small> Created with passion by Hypekingfish </small></p>
