--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <p></p>
         </section>
         <footer>
-            <p><small> Created with passion by Hypekingfish </small></p>
+            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
         </footer>
     </body>
