--- a/flying.html
+++ b/flying.html
@@ -27,7 +27,7 @@
         <article>
         </article>
         <footer>
-            <p><small> Created with passion by Hypekingfish </small></p>
+            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
         </footer>
     </body>
