--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </h3>
         </article>
         <footer>
-            <p><small> Created with passion by Hypekingfish </small></p>
+            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
         </footer>
     </body>
