--- a/about.html
+++ b/about.html
@@ -32,6 +32,9 @@
             <img src="" alt="">
             <p></p>
         </section>
+        <div class="Youtube">
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/kewJRCB2dWo"></iframe>
+        </div>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
