--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 
             </h3>
         </article>
+        <section id="contact" class="">
+
+        </section>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
