fuck this shit im done for the night

--- a/about.html
+++ b/about.html
@@ -34,7 +34,8 @@
             <p></p>
         </section>
         <div class="Youtube">
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/kewJRCB2dWo"></iframe>
+            <!-- <iframe></iframe> -->
+            <p></p>
         </div>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
