--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
             <p></p>
         </section>
         <div class="Youtube">
-            <iframe width="420" height="312" src="https://www.youtube.com/embed/tgbNymZ7vqY?control=0&autoplay=1&mute=1"></iframe>
-            <p></p>
+            <iframe width="420" height="312" src="https://www.youtube.com/embed/E_sIjkR2aFo" style="border: none;"></iframe>
+            <p> Ocassanially I will post videos on youtube</p>
         </div>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
