--- a/flying.html
+++ b/flying.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
         <title>Hypekingfish</title>
-        <link href="" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
     </head>
     <body class="container">
@@ -24,15 +24,19 @@
                 </ul>
             </nav>
         </header>
-        <section class="">
+        <section class="Vatsim">
             <div id="vatsim-hours">
-                <p>Controlling Hours: Loading...</p>
-                <p>Pilot Hours: Loading...</p>
+                <p><strong>Controlling Hours:</strong> Loading...</p>
+                <p><strong>Pilot Hours:</strong> Loading...</p>
             </div>
-            <script>
+            <div id="right">
+              <img src="img/PDX_ASDEX.png" alt="" style="display: inline; vertical-align: middle;">
+              <span style="display: inline; vertical-align: middle;"><p><strong>Controlling Hours:</strong> Loading...</p></span>
+            </div>
+            <!-- <script>
               async function fetchVatsimHours() {
                 try {
-                  // const response = await fetch('https://hypekingfish-me.netlify.app/.netlify/functions/FetchVatsimdata');
+                const response = await fetch('https://hypekingfish-me.netlify.app/.netlify/functions/FetchVatsimdata');
 
                   if (!response.ok) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
@@ -42,7 +46,7 @@
 
                   // Check if data is valid and update the HTML
                   if (data.atc !== undefined && data.pilot !== undefined) {
-                document.getElementById('vatsim-hours').innerHTML = `
+                document.getElementById('vatsim-hours').innerHTML =`
                   <p>Controlling Hours: ${response.data.atc}</p>
                   <p>Pilot Hours: ${response.data.pilot}</p>
                 `;
@@ -53,7 +57,7 @@
                   // console.error("Error fetching VATSIM hours:", error);
 
                   // Display an error message without clearing the content
-                  document.getElementById('vatsim-hours').innerHTML = `
+                document.getElementById('vatsim-hours').innerHTML = `
                     <p>Error loading hours. Please try again later.</p>
                   `;
                 }
@@ -65,7 +69,7 @@ document.addEventListener("DOMContentLoaded", () => {
   // setInterval(fetchVatsimHours, 60000); // Retry every 60 seconds
 });
 
-            </script>              
+            </script>               -->
         </section>
         <article>
         </article>
