--- a/flying.html
+++ b/flying.html
@@ -29,9 +29,9 @@
                 <p><strong>Controlling Hours:</strong> Loading...</p>
                 <p><strong>Pilot Hours:</strong> Loading...</p>
             </div>
-            <div id="right">
+            <div style="display: flex; align-items: center;" id="right">
               <img src="img/PDX_ASDEX.png" alt="" style="display: inline; vertical-align: middle;">
-              <span style="display: inline; vertical-align: middle;"><p><strong>Controlling Hours:</strong> Loading...</p></span>
+              <span></span><p><strong>Controlling Hours:</strong> Loading...</p></span>
             </div>
             <!-- <script>
               async function fetchVatsimHours() {
