testing scehdule stuff

--- a/flying.html
+++ b/flying.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
         <title>Hypekingfish</title>
-        <link href="style.css" rel="stylesheet">
+        <link href="" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
     </head>
     <body class="container">
