--- a/flying.html
+++ b/flying.html
@@ -27,8 +27,8 @@
         <section class="Vatsim">
           <h2>VATSIM Stats</h2>
           <div id="vatsim-stats">
-              <p>Controller Hours: <span id="controller-hours">Loading...</span></p>
-              <p>Pilot Hours: <span id="pilot-hours">Loading...</span></p>
+              <p><img src="img/PDX_ASDEX.png"/>Controller Hours: <span id="controller-hours">Loading...</span></p>
+              <p><img src="img/Freedom_One.PNG"/>Pilot Hours: <span id="pilot-hours">Loading...</span></p>
           </div>
           <script>
               fetch('/.netlify/functions/GetVatsimData')
