--- a/flying.html
+++ b/flying.html
@@ -31,8 +31,8 @@
                   <img src="img/PDX_ASDEX.png" alt="VATSIM">
               </div>
               <div id="vatsim-stats" class="vatsim-text">
-                  <p><img src="img/PDX_ASDEX.png" alt="Controller"/> Controller Hours: <span id="controller-hours">Loading...</span></p>
-                  <p><img src="img/Freedom_One.PNG" alt="Pilot"/> Pilot Hours: <span id="pilot-hours">Loading...</span></p>
+                  <p> Controller Hours: <span id="controller-hours">Loading...</span></p>
+                  <p><img src="img/GA_Friend.PNG" alt="Pilot"/> Pilot Hours: <span id="pilot-hours">Loading...</span></p>
               </div>
           </div>
           <script>
