--- a/flying.html
+++ b/flying.html
@@ -27,11 +27,9 @@
         <section class="Vatsim">
           <h2>VATSIM Stats</h2>
           <div class="vatsim-container">
-              <div class="vatsim-image">
-                  <img src="img/PDX_ASDEX.png" alt="VATSIM">
               </div>
               <div id="vatsim-stats" class="vatsim-text">
-                  <p> Controller Hours: <span id="controller-hours">Loading...</span></p>
+                  <p><img src="img/PDX_ASDEX.png" alt="Controller"/> Controller Hours: <span id="controller-hours">Loading...</span></p>
                   <p><img src="img/GA_Friend.PNG" alt="Pilot"/> Pilot Hours: <span id="pilot-hours">Loading...</span></p>
               </div>
           </div>
