--- a/flying.html
+++ b/flying.html
@@ -29,8 +29,10 @@
           <div class="vatsim-container">
               </div>
               <div id="vatsim-stats" class="vatsim-text">
-                  <p><img src="img/PDX_ASDEX.png" alt="Controller"/> Controller Hours: <span id="controller-hours">Loading...</span></p>
-                  <p><img src="img/GA_Friend.PNG" alt="Pilot"/> Pilot Hours: <span id="pilot-hours">Loading...</span></p>
+                <img src="img/PDX_ASDEX.png" alt="Controller"/>
+                <img src="img/GA_Friend.PNG" alt="Pilot"/>
+                <p> Controller Hours: <span id="controller-hours">Loading...</span></p>
+                <p> Pilot Hours: <span id="pilot-hours">Loading...</span></p>
               </div>
           </div>
           <script>
