--- a/flying.html
+++ b/flying.html
@@ -29,8 +29,8 @@
           <div class="vatsim-container">
               </div>
               <div id="vatsim-stats" class="vatsim-text">
-                <img src="img/PDX_ASDEX.png" alt="Controller"/><p> Controller Hours: <span id="controller-hours">Loading...</span></p>
-                <img src="img/GA_Friend.PNG" alt="Pilot"/><p> Pilot Hours: <span id="pilot-hours">Loading...</span></p>
+                <img src="img/PDX_ASDEX.png" alt="VATSIM PDX ASDEX Controller Display"/><p> Controller Hours: <span id="controller-hours">Loading...</span></p>
+                <img src="img/GA_Friend.PNG" alt="VATSIM General Aviation Aircraft"/><p> Pilot Hours: <span id="pilot-hours">Loading...</span></p>
               </div>
           </div>
           <script>
@@ -49,7 +49,7 @@
         <article>
         </article>
         <footer>
-            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
+            <p><small><img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
         </footer>
     </body>
