--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
                 <ul>
                     <li><a href="about.html">About</a></li>
                     <li><a href="flying.html">Flying</a></li>
-                    <li><a href="#"></a>Placeholder</li>
-                    <li><a></a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -30,8 +30,8 @@
             <h2>About Me</h2>
         </section>
         <section class="about">
-            <img src="" alt="">
-            <p></p>
+            <img src="img/FnBLogo_FINAL_800.png" alt="Photo of Hypekingfish">
+            <p>Hi! I'm Hypekingfish, a avid gamer who mostly plays on PC. I also code while I'm not gaming. When I'm not coding, you can find me flying in Microsoft Flight Simulator.</p>
         </section>
         <div class="Youtube">
             <iframe width="420" height="312" src="https://www.youtube.com/embed/E_sIjkR2aFo" style="border: none;"></iframe>
