header and logo stuff

--- a/about.html
+++ b/about.html
@@ -14,7 +14,10 @@
     <body class="container">
         <header>
             <h1>
-                <a href="index.html" aria-label="Go Home"><span>Hypekingfish</span></a>
+                <a href="index.html" aria-label="Go Home">
+                    <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo"/>
+                    <span>Hypekingfish</span>
+                </a>
             </h1>
             <button type="button" tabindex="-1" hidden></button>
             <nav>
@@ -30,8 +33,8 @@
             <h2>About Me</h2>
         </section>
         <section class="about">
-            <img src="img/FnBLogo_FINAL_800.png" alt="Photo of Hypekingfish">
-            <p>Hi! I'm Hypekingfish, a avid gamer who mostly plays on PC. I also code while I'm not gaming. When I'm not coding, you can find me flying in Microsoft Flight Simulator.</p>
+            <img src="" alt="">
+            <p>Hi! I'm Hypekingfish aka FishnBuckJr, a avid gamer who mostly plays on PC. I also code while I'm not gaming. When I'm not coding, you can find me flying in Microsoft Flight Simulator.</p>
         </section>
         <div class="Youtube">
             <iframe width="420" height="312" src="https://www.youtube.com/embed/E_sIjkR2aFo" style="border: none;"></iframe>
