--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
         <title>Hypekingfish</title>
         <link href="style.css" rel="stylesheet"/>
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
+        <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
     <body class="container">
         <header>
@@ -39,6 +40,20 @@
         <div class="Youtube">
             <iframe width="420" height="312" src="https://www.youtube.com/embed/E_sIjkR2aFo" style="border: none;"></iframe>
             <p> occasionally I will post videos on youtube</p>
+        </div>
+        <div class="social-links">
+            <a href="https://github.com/yourusername" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://twitter.com/yourusername" aria-label="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://youtube.com/yourchannel" aria-label="YouTube">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="https://twitch.tv/hypekingfish" aria-label="Twitch">
+                <i class="fab fa-twitch"></i>
+            </a>
         </div>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
