--- a/about.html
+++ b/about.html
@@ -42,16 +42,16 @@
             <p> occasionally I will post videos on youtube</p>
         </div>
         <div class="social-links">
-            <a href="https://github.com/yourusername" aria-label="GitHub">
+            <a href="https://github.com/yourusername" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://twitter.com/yourusername" aria-label="Twitter">
+            <a href="https://twitter.com/yourusername" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://youtube.com/yourchannel" aria-label="YouTube">
+            <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-youtube"></i>
             </a>
-            <a href="https://twitch.tv/hypekingfish" aria-label="Twitch">
+            <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-twitch"></i>
             </a>
         </div>
