--- a/about.html
+++ b/about.html
@@ -41,12 +41,17 @@
             <iframe width="420" height="312" src="https://www.youtube.com/embed/E_sIjkR2aFo" style="border: none;"></iframe>
             <p> occasionally I will post videos on youtube</p>
         </div>
-        <section class="social-links">
+        
+        <footer>
+            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
+            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
+        </footer>
+        <section class="social-links"></section>
             <div class="social-links">
             <a href="https://github.com/yourusername" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://twitter.com/yourusername" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+            <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-x-twitter"></i>
             </a>
             <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
@@ -57,9 +62,5 @@
             </a>
             </div>
         </section>
-        <footer>
-            <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
-            <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
-        </footer>
     </body>
 </html>
