--- a/about.html
+++ b/about.html
@@ -60,6 +60,9 @@
             <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-twitch"></i>
             </a>
+            <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-discord"></i>
+            </a>
             </div>
         </section>
     </body>
