about me updates

--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
             
             <h3>Skills & Interests</h3>
             <ul>
-                <li>Programming Languages: [List your languages]</li>
-                <li>Gaming: [Your favorite games/genres]</li>
-                <li>Flight Simulation: [Your experience/aircraft]</li>
-                <li>Content Creation: YouTube videos and streaming</li>
+                <li>Programming Languages: Python, HTML, CSS, JavaScript</li>
+                <li>Gaming: Flight Simulators, Minecraft, Factorio, and more!</li>
+                <li>Flight Simulation: Having over 1,500 hours in MSFS, I've flown just about every aircraft in the game.</li>
+                <li>Content Creation: I have been a content creator for over 4.5 years, and have experience with video editing, streaming, and more!</li>
             </ul>
         </section>
         <div class="Youtube">
