--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         </section>
         <div class="Youtube">
             <h3>Latest Video</h3>
-            <iframe width="420" height="312" src="https://www.youtube.com/embed/E_sIjkR2aFo" style="border: none;"></iframe>
+            <iframe width="420" height="312" style="border: none;"></iframe>
             <p>I occasionally post videos on YouTube, featuring gameplay highlights and flight simulator content.</p>
         </div>
         
@@ -74,5 +74,6 @@
                 </a>
             </div>
         </section>
+        <script src="scripts/youtube.js"></script>
     </body>
 </html>
