--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Hypekingfish</title>
         <link href="style.css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
+        <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
     <body class="container">
         <header>
@@ -38,6 +39,11 @@
                 
             </h3>
         </article>
+        <div class="Youtube">
+            <h3>Latest Video</h3>
+            <iframe width="420" height="312" style="border: none;"></iframe>
+            <p>I occasionally post videos on YouTube, featuring gameplay highlights and flight simulator content.</p>
+        </div>
         <section id="contact" class="">
 
         </section>
@@ -45,5 +51,6 @@
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
             <p><small>All content &copy; of Hypekingfish, unless previous copyright exists.</small></p>
         </footer>
+        <script src="scripts/youtube.js"></script>
     </body>
 </html>
