--- a/about.html
+++ b/about.html
@@ -44,6 +44,19 @@
                 <li>Flight Simulation: Having over 1,500 hours in MSFS, I've flown just about every aircraft in the game.</li>
                 <li>Content Creation: I have been a content creator for over 4.5 years, and have experience with video editing, streaming, and more!</li>
             </ul>
+
+            <h3>Current Projects</h3>
+            <ul>
+                <li>Personal Website Development: Building and maintaining this website</li>
+                <li>Flight Sim Content Creation: Regular streaming and video content focused on flight simulation</li>
+                <li>Programming Projects: Various coding projects (check out my Projects page!)</li>
+            </ul>
+
+            <h3>Fun Facts</h3>
+            <ul>
+                <li>Favorite Aircraft: Boeing 737-800</li>
+                <li>Most Hours in Game: Microsoft Flight Simulator (1,500+)</li>
+            </ul>
         </section>
         <footer>
             <p><small><img src="img/Progress_Pride_Flag.png"/> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"/></small></p>
