--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <h3>Fun Facts</h3>
             <ul>
                 <li>Favorite Aircraft: Boeing 737-800</li>
-                <li>Most Hours in Game: Microsoft Flight Simulator (1,500+)</li>
+                <li>Most Hours in Game: Microsoft Flight Simulator 2020 (1,500+)</li>
             </ul>
         </section>
         <footer>
